--- a/src/app/users/register/register.component.scss
+++ b/src/app/users/register/register.component.scss
@@ -1,5 +1,54 @@
+#component-header {
+  color: rgba(225, 225, 225, 0.77);
+  background: transparent;
+  border-color: rgba(225, 225, 225, 0.77);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.77);
+  box-shadow: 0 1px 25px black;
+}
+
+.submit-wrapper {
+  text-align: center;
+  min-height: 60vh;
+  display: flex;
+  flex-flow: column wrap;
+  >.inner-wrapper {
+    margin: 5vh;
+  }
+}
+
+#inputs-container {
+  margin-bottom: 25px;
+}
+
+.well {
+  background: transparent;
+  box-shadow: 0 5px 25px black;
+  border-color: rgba(225, 225, 225, 0.77);
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.row {
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+}
+
+.content-left {
+  opacity: 0.99;
+  box-shadow: 0 5px 25px black;
+  background-image: url('../../assets/home-bg10.jpg');
+  background-repeat: none;
+  padding-left: 20px;
+}
+
+.form-group {
+  width: 100%;
+}
+
 input,
-button {
+.dropdown-toggle {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
   font-size: 12px;
@@ -7,6 +56,7 @@ button {
   background-color: #2f2f2f;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  width: 100%;
   &.ng-valid.ng-touched {
     border-color: #55b559;
   }
@@ -15,24 +65,21 @@ button {
   }
 }
 
-input,
-button {
-  width: 250px;
-}
-
 .btn.btn-success {
-  color: white;
+  width: 100%;
   background-color: #55b559;
-}
-
-button.dropdown-toggle {
-  text-align: left;
-}
-
-button[type="submit"] {
   &:hover {
     text-decoration: underline;
   }
+}
+
+.invalid-input-msg {
+  padding: 10px 7.5px;
+  font-size: 1.2rem;
+  color: #FFFEFE;
+  background-color: #F55145;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 #loading {
