--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -6,7 +6,7 @@
       <span>{{this.activeItem.model}}</span>
       <span>{{this.activeItem.year}}</span>
       <a routerLink='gallery/add/{{this.activeItem._id}}' class="add-to-favorites-btn">
-      Add
+        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
       </a>
     </h3>
   </div>
