--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-inverse" role="navigation">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div *ngIf="hasLoggedUser == true" class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+      aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -32,7 +33,8 @@
   <!-- /.navbar-collapse -->
   <div class="row public-container" *ngIf="hasLoggedUser == false">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+        aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -41,11 +43,13 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
       <h1>
-        <a routerLink="/" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
-          <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+        <a routerLink="/gallery" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
+          <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
         </a>
       </h1>
-      <h1 class="app-heading col-xs-10">DREAMSTIME</h1>
+      <a routerLink="/">
+        <h1 class="app-heading col-xs-10">DREAMSTIME</h1>
+      </a>
       <h1>
         <a routerLink="/login" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
           <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span>
