--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -13,7 +13,7 @@
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div *ngIf="hasLoggedUser == true" class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
-      <li class="hvr-overline-reveal" [class.active]="activeItem === 'Gallery'" (click)="setActiveItem('Gallery')"><a routerLink="/gallery">Gallery</a></li>
+      <li class="hvr-overline-reveal" [class.active]="activeItem === 'Browse'" (click)="setActiveItem('Browse')"><a routerLink="/gallery">Browse</a></li>
       <li class="hvr-overline-reveal" [class.active]="activeItem === 'Create'" (click)="setActiveItem('Create')"><a routerLink="/submit">Create</a></li>
     </ul>
 
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
       <h1>
         <a routerLink="/gallery" class="btn btn-default navbar-btn col-xs-1" aria-label="Left Align">
-          <span class="glyphicon glyphicon-th-large" aria-hidden="true"></span>
+          <span class="glyphicon glyphicon-th" aria-hidden="true"></span>
         </a>
       </h1>
       <a routerLink="/">
