adding to favorites

--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -5,7 +5,7 @@
       <span>{{this.activeItem.make}}</span>
       <span>{{this.activeItem.model}}</span>
       <span>{{this.activeItem.year}}</span>
-      <a routerLink='gallery/add/{{this.activeItem._id}}' class="add-to-favorites-btn">
+      <a routerLink='/gallery/add/{{this.activeItem._id}}' class="add-to-favorites-btn">
         <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
       </a>
     </h3>
