fix offers ... still in progress

--- a/src/app/items/offers/make-offer.component.html
+++ b/src/app/items/offers/make-offer.component.html
@@ -1,5 +1,5 @@
 <div class="text-center">
-    <img src="{{this.item.pictures[0].imageURL}}">
+    <img src="{{this.item.pictures[0].imageUrl}}">
     <h3>StartPrice: {{this.item.price}}</h3>
     <h3>Highest offer: {{this.maxOffer}}</h3>
 
