--- a/src/app/users/add-to-favorites/add-to-favorites.component.scss
+++ b/src/app/users/add-to-favorites/add-to-favorites.component.scss
@@ -1,11 +1,8 @@
-a.add-btn {
-  span.glyphicon-heart {
-    cursor: pointer;
-    font-size: 3.5rem;
-    color: #E6E6E6;
-    // color: #9D9D9D;
-  }
-  &:hover>span.glyphicon-heart {
+span.glyphicon-heart {
+  cursor: pointer;
+  font-size: 3.5rem;
+  color: #E6E6E6;
+  &:hover {
     color: #DF474B;
   }
 }
