--- a/src/app/users/add-to-favorites/add-to-favorites.component.scss
+++ b/src/app/users/add-to-favorites/add-to-favorites.component.scss
@@ -1,8 +1,17 @@
-span.glyphicon-heart {
+span.add-to-favorites {
   cursor: pointer;
   font-size: 3.5rem;
   color: #E6E6E6;
   &:hover {
     color: #DF474B;
+  }
+}
+
+span.remove-to-favorites {
+  cursor: pointer;
+  font-size: 3.5rem;
+  color: #DF474B;
+  &:hover {
+    color: #E6E6E6;
   }
 }
