fixed removeFromFavorites method name

--- a/src/app/users/add-to-favorites/add-to-favorites.component.html
+++ b/src/app/users/add-to-favorites/add-to-favorites.component.html
@@ -1,6 +1,6 @@
 <a *ngIf="!this.itemIsFavorite" (click)="addToFavorites()">
   <span class="glyphicon glyphicon-heart add-to-favorites" aria-hidden="true"></span>
 </a>
-<a *ngIf="this.itemIsFavorite" (click)="removeToFavorites()">
+<a *ngIf="this.itemIsFavorite" (click)="removeFromFavorites()">
   <span class="glyphicon glyphicon-heart remove-to-favorites" aria-hidden="true"></span>
 </a>
