--- a/src/app/carousel-list/carousel-list.component.scss
+++ b/src/app/carousel-list/carousel-list.component.scss
@@ -5,6 +5,8 @@
     max-height: 400px;
     overflow: hidden;
     .item img {
+      width: 100%;
+      margin-top: -100px;
       height: 600px;
     }
   }
