--- a/src/app/carousel-list/carousel-list.component.html
+++ b/src/app/carousel-list/carousel-list.component.html
@@ -13,11 +13,11 @@
       </div>
     </div>
 
-    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <a *ngIf="mylist.length > 1" class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <a *ngIf="mylist.length > 1" class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
