--- a/src/app/carousel-list/carousel-list.component.scss
+++ b/src/app/carousel-list/carousel-list.component.scss
@@ -1,9 +1,6 @@
-.carousel-slide {
-  background-color: transparent;
-}
-
 .carousel-control {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, .0001) 100%);
+  color: #2098D1;
 }
 
 .well {
