--- a/src/app/users/login/login.component.scss
+++ b/src/app/users/login/login.component.scss
@@ -1,3 +1,11 @@
+#component-header {
+  color: rgba(225, 225, 225, 0.77);
+  background: transparent;
+  border-color: rgba(225, 225, 225, 0.77);
+  border-bottom: 1px solid rgba(225, 225, 225, 0.77);
+  box-shadow: 0 1px 25px black;
+}
+
 .login-wrapper {
   text-align: center;
   min-height: 60vh;
@@ -10,6 +18,7 @@
 }
 
 input {
+  text-align: center;
   color: white;
   background-color: #2f2f2f;
   border-bottom-left-radius: 0;
