comment section style changes

--- a/src/app/items/comment-section/comment-section.component.html
+++ b/src/app/items/comment-section/comment-section.component.html
@@ -3,6 +3,6 @@
     <ul></ul>
   </div>
   <div class="comment-wrapper">
-    <textarea name="comment" id="comment" cols="30" rows="10" [(ngModel)]="comment"></textarea>
+    <textarea name="comment" id="comment" [(ngModel)]="comment"></textarea>
   </div>
 </div>
