--- a/src/app/items/single-item/single-item.component.html
+++ b/src/app/items/single-item/single-item.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="single-item-wrapper">
     <h1>{{this.item.make}} {{this.item.model}} {{this.item.year}}</h1>
     <app-carousel *ngIf="this.item && this.item.pictures && this.item.pictures.length > 0" [mylist]="this.item.pictures"></app-carousel>
     <!--<div *ngIf="!this.item && !this.item.pictures && !this.item.pictures.length > 0"></div>-->
