more style changes

--- a/src/app/items/comment-section/comment-section.component.html
+++ b/src/app/items/comment-section/comment-section.component.html
@@ -6,5 +6,7 @@
   </div>
   <div class="comment-wrapper">
     <textarea name="comment" id="comment" [(ngModel)]="comment"></textarea>
+    <br>
+    <button class="btn btn-success" (click)="onSubmit()">Submit Comment</button>
   </div>
 </div>
