--- a/src/app/items/comment-section/comment-section.component.scss
+++ b/src/app/items/comment-section/comment-section.component.scss
@@ -1,5 +1,6 @@
 div.comment-section {
   width: 80%;
+  border: 1px solid red;
   margin-left: auto;
   margin-right: auto;
   div.comments-wrapper {}
