--- a/src/app/items/comment-section/comment-section.component.scss
+++ b/src/app/items/comment-section/comment-section.component.scss
@@ -3,7 +3,11 @@ div.comment-section {
   border: 1px solid red;
   margin-left: auto;
   margin-right: auto;
-  div.comments-wrapper {}
+  div.comments-wrapper {
+    ul {
+      list-style-type: none;
+    }
+  }
   div.comment-wrapper {
     #comment {
       resize: none;
