--- a/src/app/items/comment-section/comment-section.component.scss
+++ b/src/app/items/comment-section/comment-section.component.scss
@@ -1,10 +1,30 @@
+$maxScreenSizeWidth: 480px;
 div.comment-section {
   width: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 7.5vh auto;
   div.comments-wrapper {
     ul {
+      width: 60%;
+      margin: 0 auto 5vh auto;
+      padding: 0;
       list-style-type: none;
+      background-color: #F9F9F9;
+      -webkit-box-shadow: 0px 0px 9px 3px rgba(252, 252, 252, 0.75);
+      -moz-box-shadow: 0px 0px 9px 3px rgba(252, 252, 252, 0.75);
+      box-shadow: 0px 0px 9px 3px rgba(252, 252, 252, 0.75);
+      @media only screen and (max-device-width: $maxScreenSizeWidth) {
+        width: 100%;
+      }
+      li {
+        text-align: left;
+        padding: 10px;
+        border-bottom: 1px solid #ccc;
+        color: #282828;
+        h3 {
+          margin-top: 0;
+          color: #7e7e7e;
+        }
+      }
     }
   }
   div.comment-wrapper {
@@ -15,7 +35,7 @@ div.comment-section {
       color: #272727;
       width: 60%;
       height: 30vh;
-      @media only screen and (max-device-width: 480px) {
+      @media only screen and (max-device-width: $maxScreenSizeWidth) {
         width: 100%;
       }
     }
