--- a/src/app/items/comment-section/comment-section.component.html
+++ b/src/app/items/comment-section/comment-section.component.html
@@ -1,7 +1,7 @@
 <div class="comment-section">
   <div class="comments-wrapper">
     <ul>
-      <li *ngFor="let comment of listingComments">
+      <li *ngFor="let comment of listingComments | paginate: { itemsPerPage: 5, currentPage: p }">
         <div class="comment-list-item">
           <div class="author-wrapper">
             <h3 class="author">{{comment.username}}</h3>
@@ -12,6 +12,7 @@
         </div>
       </li>
     </ul>
+    <pagination-controls class="pagination-controls" (pageChange)="p = $event"></pagination-controls>
   </div>
   <div class="comment-wrapper" *ngIf="this.userStorageService.loggedUser">
     <textarea name="comment" id="comment" [(ngModel)]="comment.content"></textarea>
