login page fixed

--- a/src/app/items/comment-section/comment-section.component.scss
+++ b/src/app/items/comment-section/comment-section.component.scss
@@ -30,6 +30,7 @@ div.comment-section {
   div.comment-wrapper {
     margin-top: 5vh;
     #comment {
+      background-color: #F9F9F9;
       resize: none;
       padding: 15px;
       font-size: 2rem;
