--- a/src/app/users/login/login.component.html
+++ b/src/app/users/login/login.component.html
@@ -5,13 +5,13 @@
       <div class="form-group">
         <label> 
           <input #ngName="ngModel" class="form-control" type="text" name="username" [(ngModel)]="user.username" placeholder="Enter your username" required minlength="4" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
-          <div class="invalid-input-msg animated jello" [hidden]="ngName.valid || ngName.untouched">Your username must be between</div>
+          <div class="invalid-input-msg animated jello" [hidden]="ngName.valid || ngName.untouched">Your username must be between 4 and 30 symbols long.</div>
         </label>
       </div>
       <div class="form-group">
         <label> 
           <input #ngPass="ngModel" class="form-control" type="password" name="password" [(ngModel)]="user.password" placeholder="Enter your password" required minlength="6" maxlength="30" pattern="[a-zA-Z0-9\-_]*">
-          <div class="invalid-input-msg animated jello" [hidden]="ngPass.valid || ngPass.untouched">Your password must be between</div>
+          <div class="invalid-input-msg animated jello" [hidden]="ngPass.valid || ngPass.untouched">Your password must be between 6 and 30 symbols long.</div>
         </label>
       </div>
       <div class="form-group">
