--- a/src/app/items/comment-section/comment-section.component.html
+++ b/src/app/items/comment-section/comment-section.component.html
@@ -1,5 +1,5 @@
 <div class="comment-section">
-  <div class="comments-wrapper">
+  <div class="comments-wrapper" *ngIf="listingComments.length">
     <ul>
       <li *ngFor="let comment of listingComments | paginate: { itemsPerPage: 5, currentPage: p }">
         <div class="comment-list-item">
