--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,16 @@
-<p>
-  footer works!
-</p>
+<footer>
+  <div class="well">
+    <a href="https://github.com/team-heat/killer-app" target="_blank">
+      <p>Team Heat - Killer App @ GitHub</p>
+    </a>
+    <a href="https://github.com/ilievv" target="_blank">
+      <p>Iliyan Kupenov</p>
+    </a>
+    <a href="https://github.com/shakuu" target="_blank">
+      <p>Hristo Todorov</p>
+    </a>
+    <a href="https://github.com/StoikoNeykov" target="_blank">
+      <p>Stoiko Neykov</p>
+    </a>
+  </div>
+</footer>
