--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer>
+<!--<footer>
   <div class="well">
     <a href="https://github.com/team-heat/killer-app" target="_blank">
       <p>Team Heat - Killer App @ GitHub</p>
@@ -13,4 +13,44 @@
       <p>Stoiko Neykov</p>
     </a>
   </div>
-</footer>
+</footer>-->
+<nav class="navbar navbar-inverse" role="navigation">
+  <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+      aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+    <!--<a class="navbar-brand" href="https://github.com/team-heat/killer-app" target="_blank">
+      Team Heat - Killer App @ GitHub
+    </a>-->
+  </div>
+  <!-- Collect the nav links, forms, and other content for toggling -->
+  <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
+    <ul class="nav navbar-nav">
+      <li class="hvr-overline-reveal">
+        <a href="https://github.com/team-heat/killer-app" target="_blank">
+      Team Heat - Killer App @ GitHub
+    </a>
+      </li>
+      <li class="hvr-overline-reveal">
+        <a href="https://github.com/ilievv" target="_blank">
+          Iliyan Kupenov
+        </a>
+      </li>
+      <li class="hvr-overline-reveal">
+        <a href="https://github.com/shakuu" target="_blank">
+      Hristo Todorov
+        </a>
+      </li>
+      <li class="hvr-overline-reveal">
+        <a href="https://github.com/StoikoNeykov" target="_blank">
+      Stoiko Neykov
+        </a>
+      </li>
+    </ul>
+  </div>
+</nav>
