--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,10 +1,14 @@
 @font-face {
+  font-family: planer;
+  src: url('../../assets/Planer-Regular.otf');
+}
+
+@font-face {
   font-family: noto;
   src: url('../../assets/NotoSans-Regular.ttf');
 }
 
-footer {
-  color: rgba(225, 225, 225, 0.77);
+nav {
   margin-top: 1.5%;
   padding-left: 10px;
   padding-right: 25px;
@@ -14,8 +18,56 @@ footer {
   text-align: center;
   font-size: 20px;
   font-family: noto;
-  .well {
-    border: none;
+  .btn-default {
+    color: rgba(225, 225, 225, 0.77);
     background-color: transparent;
+    border: none;
+    font-size: 24px;
+    margin-top: 0px;
+  }
+  h1.app-heading {
+    color: rgba(225, 225, 225, 0.77);
+    font-family: planer;
+    letter-spacing: 1em;
+    margin-top: 0px;
+    &:hover {
+      color: white;
+    }
+  }
+  a.navbar-btn:hover {
+    color: white;
+  }
+  a.navbar-brand {
+    color: rgba(225, 225, 225, 0.77);
+    font-family: planer;
+    font-size: 22px;
+    &:hover {
+      color: white;
+    }
+  }
+  li.favorites-item {
+    &:hover span.glyphicon.glyphicon-heart {
+      color: #DF474B;
+    }
+    span.glyphicon.glyphicon-heart {
+      font-size: 2.5rem;
+    }
+  }
+  span.glyphicon.glyphicon-heart {
+    font-size: 2.5rem;
+    &:hover {
+      color: red;
+    }
+  }
+  li.active>a,
+  li.open>a {
+    background-color: rgba(51, 51, 51, 0.33) !important;
+    box-shadow: 0 1px 15px #000000;
+  }
+  ul.dropdown-menu {
+    >li>a {
+      font-size: 1.5rem;
+      color: #444444;
+    }
   }
 }
