--- a/src/app/carousel-list/carousel-list.component.html
+++ b/src/app/carousel-list/carousel-list.component.html
@@ -9,7 +9,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div *ngFor="let item of mylist; let i=index" class="item" [class.active]="i===0">
-        <img [attr.src]="item.imageUrl">
+        <img [attr.src]="item.imageUrl" class="animated fadeIn">
       </div>
     </div>
 
