--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -30,23 +30,23 @@
   </div>
   <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li class="hvr-overline-reveal">
+    <ul class="nav navbar-nav text-center">
+      <li>
         <a href="https://github.com/team-heat/killer-app" target="_blank">
       Team Heat - Killer App @ GitHub
     </a>
       </li>
-      <li class="hvr-overline-reveal">
+      <li>
         <a href="https://github.com/ilievv" target="_blank">
           Iliyan Kupenov
         </a>
       </li>
-      <li class="hvr-overline-reveal">
+      <li>
         <a href="https://github.com/shakuu" target="_blank">
       Hristo Todorov
         </a>
       </li>
-      <li class="hvr-overline-reveal">
+      <li>
         <a href="https://github.com/StoikoNeykov" target="_blank">
       Stoiko Neykov
         </a>
