--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,16 @@
   src: url('../../assets/NotoSans-Regular.ttf');
 }
 
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
 nav {
   margin-top: 1.5%;
   padding-left: 10px;
@@ -16,13 +26,13 @@ nav {
   box-shadow: 0 5px 25px #000000;
   background-color: rgba(0, 0, 0, 0.33);
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   font-family: noto;
   .btn-default {
     color: rgba(225, 225, 225, 0.77);
     background-color: transparent;
     border: none;
-    font-size: 24px;
+    font-size: 16px;
     margin-top: 0px;
   }
   h1.app-heading {
