--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -5,10 +5,14 @@
       <span>{{this.activeItem.make}}</span>
       <span>{{this.activeItem.model}}</span>
       <span>{{this.activeItem.year}}</span>
-      <app-add-to-favorites *ngIf="this.userStorage.isLogged()" [itemIdToFavorite]="this.activeItem._id" class="add-to-favorites-btn"></app-add-to-favorites>
+      <app-add-to-favorites (onMakeFilter)="onMakeFilter($event)" *ngIf="this.userStorage.isLogged()" [itemIdToFavorite]="this.activeItem._id"
+        class="add-to-favorites-btn"></app-add-to-favorites>
     </h3>
   </div>
   <div class="row">
+    <div *ngIf="this.items.length !== 0" class="row">
+      <app-make-filter></app-make-filter>
+    </div>
     <h3 *ngIf="this.items.length === 0">Be the first to post a new item!</h3>
     <div *ngIf="this.items.length !== 0" id="carousel-container" class="col-xs-8 col-xs-offset-2">
       <app-carousel *ngIf="this.activeItem" [mylist]="this.activeItem.pictures"></app-carousel>
