--- a/src/app/items/filters/make-filter/make-filter.component.html
+++ b/src/app/items/filters/make-filter/make-filter.component.html
@@ -1,1 +1,1 @@
-<input [(ngModel)]="this.items" (onModelChange)="onModelChange()" type="text" name="make" placeholder="Make Filter">
+<input [(ngModel)]="this.makeFilterValue" (ngModelChange)="updateValue()" type="text" name="makeFilterValue" placeholder="Make Filter">
