added color filter

--- a/src/app/items/filters/make-filter/make-filter.component.html
+++ b/src/app/items/filters/make-filter/make-filter.component.html
@@ -1,1 +1,4 @@
-<input [(ngModel)]="this.makeFilterValue" (ngModelChange)="updateValue()" type="text" name="makeFilterValue" placeholder="Make Filter">
+<div class="form-group">
+  <input class="from-control" [(ngModel)]="this.makeFilterValue" (ngModelChange)="updateValue()" type="text" name="makeFilterValue"
+    placeholder="Make Filter">
+</div>
