--- a/src/app/items/items-collection/items-collection.component.scss
+++ b/src/app/items/items-collection/items-collection.component.scss
@@ -7,6 +7,11 @@
   padding: 20px;
 }
 
+.well {
+  background-color: transparent;
+  border: none;
+}
+
 .submit-wrapper {
   text-align: center;
   min-height: 60vh;
