--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,12 @@
-<p>
-  contact works!
-</p>
+<h3 id="component-header">Contact Us</h3>
+<div class="contact-wrapper">
+  <div class="form-wrapper form-group">
+    <input type="text" class="form-group" placeholder="Name" [(ngModel)]="name">
+    <br>
+    <input type="email" class="form-group" placeholder="Email Address" [(ngModel)]="emailAddress">
+    <br>
+    <textarea name="content" id="content"></textarea>
+    <br>
+    <button class="btn btn-primary" (click)="onSubmit()">Send</button>
+  </div>
+</div>
