--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -20,9 +20,7 @@
   <div class="collapse navbar-collapse navbar-ex1-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav text-center">
       <li>
-        <a href="https://github.com/team-heat/killer-app" target="_blank">
-      Team Heat - Killer App @ GitHub
-    </a>
+        <a href="https://github.com/team-heat/killer-app" target="_blank">Team Heat - Killer App @ GitHub</a>
       </li>
       <li>
         <a href="https://github.com/ilievv" target="_blank">Iliyan Kupenov</a>
