save changes on mocked module for future testing

--- a/src/app/mocked-module/mocked.component.html
+++ b/src/app/mocked-module/mocked.component.html
@@ -2,5 +2,8 @@
     <!--<h1>It works maybe!</h1>-->
     <!--<selector-here></selector-here>-->
 
-    <app-carousel [mylist]="pictures"></app-carousel>
+    <!--<app-carousel [mylist]="pictures"></app-carousel>-->
+
+    <h1>mocked component</h1>
+    <app-statistics-list [mylist]="this.list"></app-statistics-list>
 </div>
