statistics without styles ready

--- a/src/app/statistics/partial/statistics-list-item-link.component.html
+++ b/src/app/statistics/partial/statistics-list-item-link.component.html
@@ -1,5 +1,5 @@
 <div>
-    <a touterLink="{{this.linkPrefix}}{{this.item._id}}">
+    <a routerLink="{{this.linkPrefix}}{{this.item._id}}">
         {{this.item.make}} {{this.item.model}}
     </a>
     {{this.item.count}}
