--- a/src/app/statistics/partial/statistics-list.component.html
+++ b/src/app/statistics/partial/statistics-list.component.html
@@ -1,7 +1,10 @@
-<div *ngIf="mylist && mylist[0]._id">
-
+<div *ngIf="this.isThereAnythingInTheList() && this.isThereId()">
+    <div *ngFor="let item of mylist">
+        <app-statistics-list-item-link [item]="item"></app-statistics-list-item-link>
+    </div>
 </div>
-<div *ngIf="mylist && !mylist[0]._id">
-    
+<div *ngIf="this.isThereAnythingInTheList() && !this.isThereId()">
+    <div *ngFor="let item of mylist">
+        <app-statistics-list-item [item]="item"></app-statistics-list-item>
+    </div>
 </div>
-
