changed divs with lists

--- a/src/app/statistics/partial/statistics-list.component.html
+++ b/src/app/statistics/partial/statistics-list.component.html
@@ -1,10 +1,10 @@
-<div *ngIf="this.isThereAnythingInTheList() && this.isThereId()">
-    <div *ngFor="let item of mylist">
+<ul *ngIf="this.isThereAnythingInTheList() && this.isThereId()">
+    <li *ngFor="let item of mylist">
         <app-statistics-list-item-link [item]="item"></app-statistics-list-item-link>
-    </div>
-</div>
-<div *ngIf="this.isThereAnythingInTheList() && !this.isThereId()">
-    <div *ngFor="let item of mylist">
+    </li>
+</ul>
+<ul *ngIf="this.isThereAnythingInTheList() && !this.isThereId()">
+    <li *ngFor="let item of mylist">
         <app-statistics-list-item [item]="item"></app-statistics-list-item>
-    </div>
-</div>
+    </li>
+</ul>
