--- a/src/app/users/profile/profile.component.html
+++ b/src/app/users/profile/profile.component.html
@@ -1,3 +1,6 @@
+<div id="component-header">
+  <h3>Profile</h3>
+</div>
 <div class="row">
   <div class="content-left col-xs-6">
     <img [src]="user.image" alt="profile image" width="100%">
