added statistics nav button

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -15,6 +15,7 @@
     <ul class="nav navbar-nav">
       <li class="hvr-overline-reveal" [class.active]="activeItem === 'Browse'" (click)="setActiveItem('Browse')"><a routerLink="/gallery">Browse</a></li>
       <li class="hvr-overline-reveal" [class.active]="activeItem === 'Create'" (click)="setActiveItem('Create')"><a routerLink="/submit">Create</a></li>
+      <li class="hvr-overline-reveal" [class.active]="activeItem === 'Statistics'" (click)="setActiveItem('Statistics')"><a routerLink="/statistics">Statistics</a></li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
