added item counter to gallery

--- a/src/app/items/items-collection/items-collection.component.html
+++ b/src/app/items/items-collection/items-collection.component.html
@@ -55,5 +55,8 @@
         </a>
       </div>
     </div>
+    <div *ngIf="this.items.length !== 0" id="item-number" class="row text-center">
+      <p>Displaying Item {{this.activeItemIndex + 1}} / {{this.items.length}}</p>
+    </div>
   </div>
 </div>
