styles basics and some other lil fixes

--- a/src/app/statistics/partial/statistics-list-item.component.html
+++ b/src/app/statistics/partial/statistics-list-item.component.html
@@ -1,4 +1,6 @@
 <div>
-    {{this.item.name}}  
-    {{this.item.count}}
+    {{this.item.name}}
+    <div class="go-right">
+        {{this.item.count}}
+    </div>
 </div>
