--- a/src/app/statistics/partial/statistics-list-item-link.component.html
+++ b/src/app/statistics/partial/statistics-list-item-link.component.html
@@ -2,5 +2,7 @@
     <a routerLink="{{this.linkPrefix}}{{this.item._id}}">
         {{this.item.make}} {{this.item.model}}
     </a>
-    {{this.item.count}}
+    <div class="go-right">
+        {{this.item.count}}
+    </div>
 </div>
