more styles in statistics

--- a/src/app/statistics/partial/statistics-list.component.html
+++ b/src/app/statistics/partial/statistics-list.component.html
@@ -8,4 +8,6 @@
         <app-statistics-list-item [item]="item"></app-statistics-list-item>
     </li>
 </ol>
-<a routerLink="/statistics" class="btn btn-primary">Back</a>
+<div class="go-center">
+    <a routerLink="/statistics" class="btn btn-primary">Back</a>
+</div>
