--- a/src/app/statistics/partial/statistics-list.component.scss
+++ b/src/app/statistics/partial/statistics-list.component.scss
@@ -6,6 +6,11 @@ ol {
     }
 
     li div {
+        margin-top: 10px;
         margin-right: 20px;
     }
+}
+
+.go-center {
+    text-align: center;
 }
