--- a/src/app/users/favorites/favorites.component.scss
+++ b/src/app/users/favorites/favorites.component.scss
@@ -5,6 +5,7 @@
   border-bottom: 1px solid rgba(225, 225, 225, 0.77);
   box-shadow: 0 1px 25px black;
   padding: 20px;
+  padding-bottom: 0;
   h3>span {
     text-transform: capitalize;
   }
@@ -17,19 +18,6 @@
   flex-flow: column wrap;
   >.inner-wrapper {
     margin: 5vh;
-  }
-}
-
-.add-to-favorites-btn {
-  float: right;
-  span.glyphicon-heart {
-    cursor: pointer;
-    font-size: 3.5rem;
-    color: #E6E6E6;
-    // color: #9D9D9D;
-  }
-  &:hover>span.glyphicon-heart {
-    color: #DF474B;
   }
 }
 
