more styles for statistics

--- a/src/app/statistics/partial/statistics-list.component.scss
+++ b/src/app/statistics/partial/statistics-list.component.scss
@@ -5,9 +5,16 @@ ol {
         float: right;
     }
 
-    li div {
+    li {        
         margin-top: 10px;
+    }
+
+    li div {
         margin-right: 20px;
+    }
+
+    li:nth-child(2n){
+        background-color: rgba(225, 225, 225, 0.05);
     }
 }
 
