--- a/src/app/users/favorites/favorites.component.html
+++ b/src/app/users/favorites/favorites.component.html
@@ -1,14 +1,12 @@
 <div class="submit-wrapper">
   <div id="component-header">
-    <div class="row">
-      <h3 *ngIf="this.items.length === 0">Dreamstime Gallery</h3>
-      <h3 *ngIf="this.items.length !== 0" class="col-xs-10 col-xs-offset-1">
-        <span>{{this.activeItem.make}}</span>
-        <span>{{this.activeItem.model}}</span>
-        <span>{{this.activeItem.year}}</span>
-      </h3>
-      <app-add-to-favorites class="col-xs-1" *ngIf="this.items.length !== 0 && this.userStorage.isLogged() " [itemIdToFavorite]="this.activeItem._id"></app-add-to-favorites>
-    </div>
+    <h3 *ngIf="this.items.length === 0">Dreamstime Gallery</h3>
+    <h3 *ngIf="this.items.length !== 0" class=" text-center">
+      <span> {{this.activeItem.make}}</span>
+      <span>{{this.activeItem.model}}</span>
+      <span>{{this.activeItem.year}}</span>
+      <app-add-to-favorites *ngIf="this.items.length !== 0 && this.userStorage.isLogged() " [itemIdToFavorite]="this.activeItem._id"></app-add-to-favorites>
+    </h3>
   </div>
   <div class="row ">
     <h3 *ngIf="this.items.length===0 ">Be the first to post a new item!</h3>
@@ -33,6 +31,9 @@
           Next
         </a>
       </div>
+    </div>
+    <div *ngIf="this.items.length !== 0" id="item-number" class="row text-center">
+      <p>Displaying Item {{this.activeItemIndex + 1}} / {{this.items.length}}</p>
     </div>
   </div>
 </div>
